@@ -188,10 +188,6 @@ public class IO {
                         print("2 ");
                         print("3 ");
                         println();
-                        System.console().print("1 ");
-                        System.console().print("2 ");
-                        System.console().print("3 ");
-                        System.console().println();
                     }
                     """);
         }
@@ -202,22 +198,9 @@ public class IO {
         output.reportDiagnosticSummary();
         String out = output.getStdout();
         String nl = System.getProperty("line.separator");
-        assertEquals("1 2 3 " + nl + "1 2 3 " + nl, out);
+        assertEquals("1 2 3 " + nl, out);
     }
 
-
-    @ParameterizedTest
-    @ValueSource(strings = {"println", "print", "input"})
-    public void nullConsole(String method) throws Exception {
-        var file = Path.of(System.getProperty("test.src", "."), "Methods.java")
-                .toAbsolutePath().toString();
-        var pb = ProcessTools.createTestJavaProcessBuilder("-Djdk.console=gibberish",
-                "--enable-preview", file, method);
-        OutputAnalyzer output = ProcessTools.executeProcess(pb);
-        output.reportDiagnosticSummary();
-        assertEquals(1, output.getExitValue());
-        output.shouldContain("Exception in thread \"main\" java.io.IOError");
-    }
 
 
     // adapted from https://junit.org/junit5/docs/current/user-guide/#extensions-lifecycle-callbacks-timing-extension
